<resources>
    <string name="app_name">Gym Notes App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cadastre_uma_nova_s_rie_de_exercicios">Cadastre uma nova série de exercicios</string>
    <string name="nomeie_sua_s_rie_de_exercicios">Nomeie sua série de exercicios</string>
    <string name="ex_treino_de_peito">ex: Treino de Peito</string>
    <string name="dias_em_que_realizar_a_s_rie">Dias em que realizará a série:</string>
    <string name="recomendado_treinar_s_ries_com_intervalos_de_dias">É recomendado treinar séries com intervalos de dias.</string>
    <string name="criar_nova_s_rie">Criar nova série</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Senha</string>
    <string name="confirme_password">Confirmar Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="gym_notes">GYM NOTES</string>
    <string name="login">Login</string>
    <string name="seg">Seg</string>
    <string name="ter">Ter</string>
    <string name="qua">Qua</string>
    <string name="qui">Qui</string>
    <string name="sex">Sex</string>
    <string name="sab">Sab</string>
    <string name="dom">Dom</string>
    <string name="dia_da_serie">Dia Da Serie</string>
    <string name="nome_da_serie">Nome da Serie</string>
    <string name="edite_sua_s_rie_de_exercicios">Edite sua Série de Exercicios</string>
    <string name="edite_a_serie">Edite a série</string>
    <string name="bot_o_de_excluir_serie">Botão de Excluir serie</string>
    <string name="logout_button">Logout Button</string>
    <string name="logout">Logout</string>
</resources>