<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.EditDeleteSerieFragment">

    <ImageView
        android:id="@+id/imageViewDeleteSerie"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/bot_o_de_excluir_serie"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextviewEditDeleteTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/edite_sua_s_rie_de_exercicios"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewDeleteSerie" />

    <TextView
        android:id="@+id/TextviewEditDeleteTituloNomeSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/nomeie_sua_s_rie_de_exercicios"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextviewEditDeleteTitulo" />

    <EditText
        android:id="@+id/editTextEditDeleteNomeSerie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/ex_treino_de_peito"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextviewEditDeleteTituloNomeSerie"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/TextviewEditDeleteTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/dias_em_que_realizar_a_s_rie"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEditDeleteNomeSerie" />

    <LinearLayout
        android:id="@+id/lineaLayoutEditDeleteGroupDiasSemana1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextviewEditDeleteTitulo2">

        <CheckBox
            android:id="@+id/checkBoxEditDeleteSeg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seg" />

        <CheckBox
            android:id="@+id/checkBoxEditDeleteTer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ter" />

        <CheckBox
            android:id="@+id/checkBoxEditDeleteQua"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qua" />

        <CheckBox
            android:id="@+id/checkBoxEditDeleteQui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qui" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/lineaLayoutEditDeleteGroupDiasSemana2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineaLayoutEditDeleteGroupDiasSemana1"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBoxEditDeleteSex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex" />

        <CheckBox
            android:id="@+id/checkBoxEditDeleteSab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sab" />

        <CheckBox
            android:id="@+id/checkBoxEditDeleteDom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dom" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextviewEditDeleteTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/recomendado_treinar_s_ries_com_intervalos_de_dias"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineaLayoutEditDeleteGroupDiasSemana2" />

    <Button
        android:id="@+id/buttonEditDeleteSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/edite_a_serie"
        app:icon="@drawable/ic_baseline_edit_24"
        app:iconGravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextviewEditDeleteTip" />

</androidx.constraintlayout.widget.ConstraintLayout>